[package]
name = "rcon"
version = "0.4.1"
edition = "2021"

[features]
simple_api = []

[dependencies]
base64 = "0.22.1"
bytes = "1.6.0"
lazy_static = "1.4.0"
nom = "7.1.3"
regex = "1.10.6"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["serde"] }
