[package]
name = "wise"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.1.0", path = "../rcon" }
bytes = "1.6.0"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.7", features = ["derive"] }
clap_derive = "4.5.5"
config = "0.14.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_with = "3.8.1"
tokio-tungstenite = { version = "0.23.0", features = ["rustls", "rustls-tls-webpki-roots"] }
futures-util = "0.3.30"
serde_json = "1.0.117"
rustls-pemfile = "2.1.2"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }
