[package]
name = "wise_api"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.2.0", path = "../rcon" }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.128"
uuid = "1.10.0"
